tests/functional2/lang/function-args/eval-fail-unexpected-arg.err.exp
error:
       … from call site
         at /pwd/in.nix:1:1:
            1| ({x, z}: x + z) {x = "foo"; y = "bla"; z = "bar";}
             | ^
            2|

       error: function 'anonymous lambda' called with unexpected argument 'y'
       at /pwd/in.nix:1:2:
            1| ({x, z}: x + z) {x = "foo"; y = "bla"; z = "bar";}
             |  ^
            2|
